objects/RegistrationLayer__c.object
<CustomObject>
    <fields>
        <fullName>CertRegFrom__c</fullName>
        <label>CertRegFrom</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting</label>
        <referenceTo>Meeting__c</referenceTo>
        <relationshipLabel>RegistrationLayers</relationshipLabel>
        <relationshipName>RegistrationLayers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PointsYR1__c</fullName>
        <label>PointsYR1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PointsYR2__c</fullName>
        <label>PointsYR2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RegistrationLayer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RegistrationLayer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RegistrationLayers</pluralLabel>
    <recordTypes>
        <fullName>Test</fullName>
        <active>true</active>
        <label>Test</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>